integrations move integrations to interface
PR https://github.com/sogehige/sogeBot/pull/1606

--- a/public/oauth/spotify.html
+++ b/public/oauth/spotify.html
@@ -52,7 +52,7 @@
         if (urlState === state) {
           $('#stateOk').removeClass('d-none')
           socket.emit('code', urlCode, (err, cb) => {
-            setTimeout(() => window.location.href = window.location.origin + "/#integrations", 5000)
+            window.location.href = window.location.origin + "/#integrations-spotify"
           })
         } else {
           $('#stateError').removeClass('d-none')
