--- a/public/pages/registry/textOverlay/edit.html
+++ b/public/pages/registry/textOverlay/edit.html
@@ -22,7 +22,7 @@
         </button>
       </div>
       <div class="col text-right form-inline d-block">
-          <a v-bind:href="'/overlays/text?id='+ id" class="btn btn-dark" target="_blank"><i class="fas fa-link"></i> /overlays/text?id={{ id }}</a>
+          <a v-if="id" v-bind:href="'/overlays/text?id='+ id" class="btn btn-dark" target="_blank"><i class="fas fa-link"></i> /overlays/text?id={{ id }}</a>
           <span v-if="pending" style="cursor: auto;" class="alert-danger btn m-0">{{commons.translate('dialog.changesPending')}}</span>
           <button v-if="states.save === 0" type="button" class="btn btn-primary" v-on:click="save()">{{ commons.translate('dialog.buttons.saveChanges.idle') }}</button>
           <button v-if="states.save === 1" disabled="disabled" type="button" class="btn btn-primary"><i class="fas fa-circle-notch fa-spin"></i> {{ commons.translate('dialog.buttons.saveChanges.progress') }}</button>
